[metadata]
name = ebt
version = attr: cca.ebt.__version__
url = https://github.com/ebt-hpc/cca-ebt
author = Masatomo Hashimoto
author_email = m.hashimoto@stair.center
license = Apache-2.0
description = Helper scripts for the Evidence-Based performance Tuning Framework
long_description = file: README.md

[options]
package_dir =
    =src
packages = find_namespace:
install_requires =
    cca

[options.packages.find]
where = src

